# WikiAutoTrans

./: .git-ignore  .gitignore  README.md  pyproject.toml  translate_pages.py
input/: pages_to_translate.txt
src/config/: config.json  config.py  pywikibot-ThiagoSousaSilveira.lwp  sample-user-config.py  sample-user-password.py
src/translation_engine/: translation.py
src/utils/: utils.py
src/wikipedia_wrapper/: nonprose_element.py  page_doesnt_exist_error.py  wiki_not_available_error.py  wikipedia_translator.py
tests/translation/: test_translation.py
tests/wikipedia_wrapper/: test_nonprose_element.py  test_wikipedia_translator.py
