[tool.poetry]
name = "wikipediatranslation"
version = "0.1.0"
description = ""
authors = ["Thiago Silveira <thiago.silveira@giance.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.54.4"
pytest = "^8.3.3"
langdetect = "^1.0.9"
pywikibot = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
